--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
         }
     </style>
 </head>
-        <!--Star-->
-<!--         <svg width="300" height="300">
-            <polygon points="50 160 55 180 70 180 60 190 65 205 50 195 35 205 40 190 30 180 45 180"
-      stroke="purple" fill="transparent" stroke-width="5"/>
-        </svg> -->
-        
+    <body>
         <!--Star-->
         <svg width="300" height="300">
             <polygon points="0 100 120 100 150 0 180 100 300 100 200 180 250 300 150 220 50 300 100 180"
